--- a/index.html
+++ b/index.html
@@ -40,18 +40,21 @@
             <p>Tenha em mente que várias discussões ainda estão ocorrendo entre os coordenadores tanto do DC quanto da Universidade, 
             portanto é possível que algumas de suas dúvidas ainda não tenham uma resposta definitiva.</p>
 
+            <p>
+          		Última atualização: 13/07/2020
+            </p>
+
         </div>
         <div class="tagline">
             <p>
-            	Pedimos a gentileza de antes de entrar em contato com a secretaria do DC para o esclarecimento de dúvidas, veja se a mesma já não encontra-se respondida nesta FAQ ou na <a href="http://www.prograd.ufscar.br/covid-19-faq-prograd-atualizada">FAQ</a> da Prograd!
+            	Pedimos a gentileza de antes de entrar em contato com a secretaria do DC para o esclarecimento de dúvidas, veja se a mesma já não encontra-se respondida nesta FAQ ou na <a href="http://www.prograd.ufscar.br/covid-19-faq-prograd-atualizada" target="_blank">FAQ</a> da Prograd!
             	
             </p>
             <p>
-            	Caso possua dúvidas mais específicas que não são respondidas neste FAQ, existem duas maneiras de entrar em contato conosco. A primeira é por meio do <a href="mailto:secretaria.graduacao.dc@ufscar.br">EMAIL</a> da secretaria. A segunda forma é por chamada de voz;  a EADis (Equipe de Apoio aos Discentes) realiza rodas de conversa semanais todas quartas-feiras, entre 10:00 e 11:00 da manhã.
+            	Caso possua dúvidas mais específicas que não são respondidas neste FAQ, existem duas maneiras de entrar em contato conosco. A primeira é por meio do <a href="mailto:secretaria.graduacao.dc@ufscar.br">EMAIL</a> da secretaria. A segunda forma é por chamada de voz;  a EADis (Equipe de Apoio aos Discentes) realiza rodas de conversa semanais todas às quartas-feiras, entre 10:00 e 11:00 da manhã.
             </p>
 
         </div>
-
 
 
         <div class="container">
@@ -82,10 +85,10 @@
                     <input type="checkbox" name="input_pergunta" id="pergunta2" class="__input">
                     <label for="pergunta2" class="__label">Haverá alguma pesquisa do departamento para identificar as disciplinas de maior interesse dos alunos?</label>
                     <div class="__content">
-                    <p>Já houve uma consulta aos docentes sobre quais disciplinas com créditos práticos são passíveis de serem
-                       ofertadas remotamente. Os resultados sairão em breve. O mesmo tipo de consulta será feito para disciplinas
-                       teóricas. O compromisso do departamento é de ofertar as disciplinas do perfil atual, que é 2020/1. Disciplinas
-                       do segundo semestre poderão ser ofertadas, porém não há garantia.
+                    <p>Sim, o departamento realizou uma consulta por meio de um forms para saber quais seriam as matérias do DC que os alunos teriam interesse em se inscrever no próximo semestre. O forms ficou disponível dos dias 08/07/2020 até 12/07/2020. Essa consulta visou apoiar a chefia e não garante que uma dada disciplina será oferecida, independentemente do número de alunos que a selecionarem.
+					O mesmo foi feito para as disciplinas do DM, sendo que esse outro forms ficou disponível dos dias 10/07/2020 até
+					13/07/2020.
+
                        </p>
                     </div>
                 </div>
@@ -182,6 +185,25 @@
                         </p>
                     </div>
                 </div>
+
+                <div>
+                    <input type="checkbox" name="input_pergunta" id="pergunta11" class="__input">
+                    <label for="pergunta11" class="__label">Vou ter dificuldades em cursar o semestre de forma remota, como posso informar isso ao departamento?</label>
+                    <div class="__content">
+                    <p>Há duas formas indicadas para isso, a primeira é pelo <a href="https://forms.gle/XXSbfRAM78y9DnEH6" target="_blank">Forms</a>. A segunda é por meio do <a href="mailto:secretaria.graduacao.dc@ufscar.br">EMAIL</a> da secretaria, porém recomendamos que use a primeira forma. 
+                    </p>
+                    </div>
+                </div>
+
+                <div>
+                    <input type="checkbox" name="input_pergunta" id="pergunta12" class="__input">
+                    <label for="pergunta12" class="__label">A quantidade de disciplinas que poderão ser pegas juntamente com o estágio obrigatório será mantida?</label>
+                    <div class="__content">
+                    <p>Provavelmente. Como as disciplinas devem continuar contando o mesmo número de créditos, a contagem deverá ser a mesma. Por exemplo, uma disciplina de 4 créditos (4 horas semanais), continuará sendo de 4 créditos mesmo no formato remoto, então, ela continuará contando 4 horas semanais. 
+                    </p>
+                    </div>
+                </div>
+
 
             </div>
 
