correção erro ortografico

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <input type="checkbox" name="input_pergunta" id="pergunta2" class="__input">
                     <label for="pergunta2" class="__label">Haverá alguma pesquisa do departamento para identificar as disciplinas de maior interesse dos alunos?</label>
                     <div class="__content">
-                    <p>Sim, o departamento realizou uma consulta por meio de um forms para saber quais seriam as matérias do DC que os alunos teriam interesse em se inscrever no próximo semestre. O forms ficou disponível dos dias 08/07/2020 até 12/07/2020. Essa consulta visou apoiar a chefia e não garante que uma dada disciplina será oferecida, independentemente do número de alunos que a selecionarem.
+                    <p>Sim, o departamento realizou uma consulta por meio de um forms para saber quais seriam as matérias do DC que os alunos teriam interesse em se inscrever no próximo semestre. O forms ficou disponível dos dias 08/07/2020 até 12/07/2020. Essa consulta visou apoiar a chefia e não garante que uma dada disciplina será oferecida, independentemente do número de alunos que a selecionaram.
 					O mesmo foi feito para as disciplinas do DM, sendo que esse outro forms ficou disponível dos dias 10/07/2020 até
 					13/07/2020.
 
